# Index-anisora-replicate

./: .gitignore  README.md  README_CN.md  cog.yaml  import_fixer.py  predict.py  setup.py
anisoraV2_npu/: .gitignore  README.md  diffusers-0.32.1-py3-none-any.whl  env_setup.sh  packages.txt  predict.py  pyproject.toml  req.txt
anisoraV2_npu/fastvideo/: train.py
anisoraV2_npu/fastvideo/bili_space/: .gitignore  hunyuan_dit.txt  log_print.py  npu_func.py  prompt.txt
anisoraV2_npu/fastvideo/data_preprocess/: preprocess_text_embeddings.py  preprocess_vae_latents.py  preprocess_validation_text_embeddings.py
anisoraV2_npu/fastvideo/dataset/: __init__.py  latent_datasets.py  t2v_datasets.py  transform.py
anisoraV2_npu/fastvideo/distill/: discriminator.py
anisoraV2_npu/fastvideo/models/: flash_attn_no_pad.py
anisoraV2_npu/fastvideo/sample/: generate_synthetic.py  sample_t2v_hunyuan.py  sample_t2v_mochi.py
anisoraV2_npu/fastvideo/utils/: checkpoint.py  communications.py  dataset_utils.py  fsdp_util.py  load.py  logging_.py  optimizer.py  parallel_states.py  validation.py
anisoraV2_npu/preprocess/: extract-clip.py  extract-t5.py  extract-vae1.py  extract-vae_all.py
anisoraV2_npu/scripts/distill/: distill_hunyuan.sh  distill_mochi.sh
anisoraV2_npu/scripts/finetune/: finetune_cog15B.sh  finetune_hunyuan.sh  finetune_mochi.sh  finetune_mochi_lora.sh  finetune_mochi_lora_mix.sh  finetune_wan.sh
anisoraV2_npu/scripts/inference/: inference_hunyuan.sh  inference_mochi_no_sp.sh  (+1 more)
anisoraV2_npu/test_data/: data.json  todo-inference.txt  train_data_prompts.txt
(+365 files in other folders)
